Adds styles to buttons, forms, lists.

--- a/template/login.html
+++ b/template/login.html
@@ -8,7 +8,7 @@
 			<label for="password" class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2 col-lg-offset-3 col-lg-3">Jelszó</label>
 			<input id="password" name="password" type="password" class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 		</div>
-		<input type="submit" name="Login" class="center-block" value="Bejelentkezés">
+		<input type="submit" name="Login" class="center-block btn btn-primary" value="Bejelentkezés">
 	</form>
 	<form id="register" method="post">
 		<div class="row">
@@ -23,7 +23,7 @@
 			<label for="reg_pass" class="col-xs-12 col-sm-6 col-md-4 col-lg-offset-3 col-lg-3">Normál felhasználó jelszava</label>
 			<input id="reg_pass" type="password" name="reg_pass" class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 		</div>
-		<input type="submit" name="Register" class="center-block" value="Regisztrál">
+		<input type="submit" name="Register" class="center-block btn btn-secondaryx" value="Regisztrálás">
 
 	</form>
 </div>
