--- a/template/admin_page.html
+++ b/template/admin_page.html
@@ -1,9 +1,7 @@
 
 	<div class="row">
-		<div>
-			<button class="center-block">
-				<a href="admin_page.php?list" class="text-center">List users</a>
-			</button>
+		<div class="center-block col-xs-offset-3 col-xs-6">
+			<a href="admin_page.php?list" class="col-xs-offset-3 col-xs-6 center-block btn btn-primary">List users</a>
 		</div>
 	</div>
 </div>
