Lighter form border.

--- a/template/style.css
+++ b/template/style.css
@@ -1,6 +1,6 @@
 form {
 	padding: 80px 20px 20px 20px;
-	border: 2px solid #777;
+	border: 2px solid #e2dfdf;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
