--- a/template/admin_page.html
+++ b/template/admin_page.html
@@ -1,7 +1,7 @@
 
 	<div class="row">
-		<div class="center-block col-xs-offset-3 col-xs-6">
-			<a href="admin_page.php?list" class="col-xs-offset-3 col-xs-6 center-block btn btn-primary">List users</a>
+		<div class="col-xs-offset-4 col-xs-4 col-lg-offset-5 col-lg-2">
+			<a href="admin_page.php?list" class="center-block btn btn-primary">List users</a>
 		</div>
 	</div>
 </div>
