--- a/template/login.html
+++ b/template/login.html
@@ -9,7 +9,14 @@
 		</div>
 		<input type="submit" name="Login" class="center-block btn btn-primary" value="Bejelentkezés">
 	</form>
-	<form id="register" method="post">
+	<div class="row">
+		<div class="col-xs-offset-4 col-xs-4 col-lg-offset-5 col-lg-2 text-center">
+			Regisztráció
+			<a href="#" id="show" name="show" class="btn btn-default center-block">&#x25bc;</a>
+
+		</div>
+	</div>
+	<form id="register" method="post" hidden="true">
 		<div class="row">
 			<label for="reg_name" class="col-xs-12 col-sm-6 col-md-4 col-lg-offset-3 col-lg-3">Normál felhasználó neve</label>
 			<input id="reg_name" type="text" name="reg_name" class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
@@ -22,7 +29,7 @@
 			<label for="reg_pass" class="col-xs-12 col-sm-6 col-md-4 col-lg-offset-3 col-lg-3">Normál felhasználó jelszava</label>
 			<input id="reg_pass" type="password" name="reg_pass" class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 		</div>
-		<input type="submit" name="Register" class="center-block btn btn-secondaryx" value="Regisztrálás">
+		<input type="submit" name="Register" class="center-block btn btn-secondary" value="Regisztrálás">
 
 	</form>
 </div>
